change mathbf to boldsymbol for greek symbols

--- a/calibration.tex
+++ b/calibration.tex
@@ -1,13 +1,13 @@
 \section{Simulation Calibration}
 \ignorethis{\karen{Need to motivate why we pick these simulation parameters.}}
-Although the optimal controllers $\bar{\mathbf{q}}(t)$ can work effectively in the simulation, they may fail to achieve the tasks in the real world. One cause of this failure is the erroneous parameter settings in the physical simulation, such as the mass, the moment of inertia, the COM of each body segment, and the gains of the actuators. Usually, simulation parameters are set according to the specification of the robot. However, we find that many of these specifications are inaccurate. For example, there is about 40\% of error in the total mass of our robot between the open-source CAD file and our own measurement. Instead of trusting these parameters, we decide to adjust them in simulation calibration. We formulate an optimization that searches for the simulation parameters $\mathbf{\theta}$ to minimize the discrepancy $E_{cali}$ between the simulated results and the robot performance in the real environment.
+Although the optimal controllers $\bar{\mathbf{q}}(t)$ can work effectively in the simulation, they may fail to achieve the tasks in the real world. One cause of this failure is the erroneous parameter settings in the physical simulation, such as the mass, the moment of inertia, the COM of each body segment, and the gains of the actuators. Usually, simulation parameters are set according to the specification of the robot. However, we find that many of these specifications are inaccurate. For example, there is about 40\% of error in the total mass of our robot between the open-source CAD file and our own measurement. Instead of trusting these parameters, we decide to adjust them in simulation calibration. We formulate an optimization that searches for the simulation parameters $\boldsymbol{\theta}$ to minimize the discrepancy $E_{cali}$ between the simulated results and the robot performance in the real environment.
 
 \begin{equation}
- \min_{\mathbf{\theta}} E_{cali}
+ \min_{\boldsymbol{\theta}} E_{cali}
 \label{eqn:calibration}
 \end{equation}
 
-Although there are dozens of simulation parameters $\mathbf{\theta}$ that we could calibrate, we choose to focus on the gains of the actuators and the COM of each body segment. We believe that they are the most relevant parameters to our tasks. Our tasks involve changing postures and maintaining balance. We decide to calibrate only actuator gains and COM because the actuator gains are critical to posture change and the COM is vital to balance.
+Although there are dozens of simulation parameters $\boldsymbol{\theta}$ that we could calibrate, we choose to focus on the gains of the actuators and the COM of each body segment. We believe that they are the most relevant parameters to our tasks. Our tasks involve changing postures and maintaining balance. We decide to calibrate only actuator gains and COM because the actuator gains are critical to posture change and the COM is vital to balance.
 
 $E_{cali}$ is defined as the difference between the state trajectories in the simulation and those collected in the real robot experiments when the same controller is used in both scenarios:
 
@@ -17,5 +17,5 @@ $E_{cali}$ is defined as the difference between the state trajectories in the si
 \end{equation}
 Recall that our entire algorithm is an iterative process. At the $n$th iteration, the optimal controller $\bar{\mathbf{q}}_n(t)$ produces the state trajectory $\mathbf{x}_n(t)$ in the simulation and $\tilde{\mathbf{x}}_n(t)$ on the real robot\footnote{we use the average of the multiple trajectories as $\tilde{\mathbf{x}}_n(t)$ in the robot experiment because even with the same controller, we can get slightly different trajectories due to the varied initial conditions, the noise from the sensor, from the actuator and from the environment.}. $E_{cali}$ is measured using all $n$ optimal controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ and their associated state trajectories $\{\bar{\mathbf{x}}_i(t)\}_{i=1,...,n}$ from the current and the previous iterations. $\mathbf{W}$ is a weight matrix, which encapsulates the relative importance of each joint.
 
-Due to the presence of contact changes in the locomotion task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is challenging using traditional continuous optimization algorithms. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\mathbf{\theta}$. To evaluate each CMA sample, we set the parameters $\mathbf{\theta}$ in the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}_i(t)\}_{i=1,...,n}$, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
+Due to the presence of contact changes in the locomotion task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is challenging using traditional continuous optimization algorithms. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\boldsymbol{\theta}$. To evaluate each CMA sample, we set the parameters $\boldsymbol{\theta}$ in the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}_i(t)\}_{i=1,...,n}$, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
 
